Fix featured images overflowing on certain archive pages

--- a/src/sass/partials/_archives.scss
+++ b/src/sass/partials/_archives.scss
@@ -5,11 +5,19 @@
 body.archive {
     
     article[class^='post'] {
+		
         padding: 1.5rem 0 0;
         margin: 0 0 1rem;
         background: $white;
         border-radius: .2rem;
         border: 1px solid #eee;
+		
+		&:after {
+			display: block;
+			content: '';
+			clear: both;
+		}
+		
     }
     
     .entry-title {
